tests/sema/fail/v3_fail_u32_literal_range.ep
# COMPILE_FAIL: literal -1 out of range for u32

fun main(): i64 {
    let x: u32 = -1
    return x
}
